--- a/style.css
+++ b/style.css
@@ -12,3 +12,42 @@
   height: 100%;
 }
 
+/*Colors 45eba5, 21aba5, 1d566e, 163a5f
+/*Set height of grid so sidenav can be 100% (adjust if needed) */
+
+
+html, body {
+  height: 100%;
+}
+
+.row {
+  height: 1500px;
+   
+}
+/* Set background color for sidenav and 100% height */
+
+.sidenav {
+  background-color: #45eba5;
+  height: 100%;
+}
+
+footer {
+  background-color: #163a5f;
+  color: white;
+  position: ;
+  margin-bottom: 0;
+  margin-left: 0;
+  width: 100%;
+  padding: 15px;
+}
+
+/*On small screens, set height to 'auto'for sidenav and grid */
+@media screen and (max-width: 767px){
+  .sidenav {
+    height: auto;
+    padding: 15px;
+  }
+  .row {
+    height: auto;
+  }
+}
